// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`refractor elements CriterionElement given type field of Expression Type Object shape should refract to ExpressionTypeElement 1`] = `
(CriterionElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (ExpressionTypeElement
      (MemberElement
        (StringElement)
        (StringElement))
      (MemberElement
        (StringElement)
        (StringElement)))))
`;

exports[`refractor elements CriterionElement should refract to semantic ApiDOM tree 1`] = `
(CriterionElement
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement))
  (MemberElement
    (StringElement)
    (StringElement)))
`;
